fixes issue with footer on mobile.

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ a:hover {
   position: relative;
   background-color: #CCD1D1;
   height: 70px;
-  width: 110%;
+  /* width: 110%; */
   box-sizing: border-box;
   display: flex;
   justify-content: space-around;
@@ -135,6 +135,15 @@ a:hover {
 /*This makes some text white.*/
 .white-text {
   color: white;
+}
+
+/* For tablet css */
+@media only screen and (max-width: 1100px) {
+  .my_projects{
+    color: white;
+    margin-left: 1em;
+    font-size: 12pt;
+  }
 }
 
 /* For mobile css (inside only  changes for small screens)*/
@@ -220,8 +229,11 @@ a:hover {
     font-size: 0pt;
   }
 
+  /* This changes the margin for 'My Projects' */
   .my_projects{
+    color: black;
     margin-left: 1em;
+    font-size: 18pt;
   }
 
 }
